--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clonenames</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="image/png" id="favicon">
 </head>
@@ -19,7 +19,7 @@
         <div id="game">
             <div id="game-status">
                 <div id="score">
-                    <span id=bluescore>7</span>-<span id=redscore>7</span> 
+                    <span id=bluescore>7</span><span id="dash">-</span><span id=redscore>7</span> 
                 </div>
                 <div id="status">
                     blue's turn
