--- a/client/index.html
+++ b/client/index.html
@@ -64,6 +64,7 @@
             </div>
         </div>
     </div>
+    <div id="rules"><a href="https://en.wikipedia.org/wiki/Codenames_(board_game)#Rules" target="_blank">rules</a></div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="client.js"></script>
 </body>
