github icon fix

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clonenames</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="image/png" id="favicon">
 </head>
@@ -65,6 +66,7 @@
         </div>
     </div>
     <div id="rules"><a href="https://en.wikipedia.org/wiki/Codenames_(board_game)#Rules" target="_blank">rules</a></div>
+    <div id="github"><a href="https://github.com/coinerwh/Clonenames" target="_blank"><i class="fa fa-github fa_custom fa-4x"></i></i></a></div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="client.js"></script>
 </body>
